# chimera

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  install.sh
.github/actions/docker-hello/: action.yml  entrypoint.sh
.github/actions/greet/: action.yml
.github/workflows/: chimera-test.yml  ci.yml  release.yml
docs/: gh-protocol.md
src/: cache.rs  cli.rs  config.rs  config_test.rs  daemon.rs  daemon_test.rs  docker.rs  github.rs  job.rs  lib.rs  main.rs  node.rs  runner.rs  runner_test.rs  utils.rs  utils_test.rs
src/cache/: config.rs  config_test.rs  entry.rs  entry_test.rs  error.rs  manager.rs  manager_test.rs  server.rs  server_test.rs  store.rs  store_test.rs  upload.rs  upload_test.rs
src/docker/: client.rs  container.rs  container_test.rs  exec.rs  exec_test.rs  network.rs  options.rs  options_test.rs  output.rs  output_test.rs  resources.rs  resources_test.rs
src/github/: auth.rs  auth_test.rs  broker.rs  broker_test.rs  registration.rs  registration_test.rs
src/job/: action.rs  client.rs  client_test.rs  commands.rs  commands_test.rs  execute.rs  execute_test.rs  expression.rs  expression_test.rs  live_feed.rs  live_feed_test.rs  logs.rs  logs_test.rs  manifest.rs  manifest_test.rs  mod.rs  mod_test.rs  schema.rs  schema_test.rs  timeline.rs  timeline_test.rs  workspace.rs  workspace_test.rs
src/job/action/: composite.rs  composite_test.rs  docker.rs  docker_test.rs  download.rs  download_test.rs  metadata.rs  metadata_test.rs  node.rs  node_test.rs  resolve.rs  resolve_test.rs
src/job/expression/: eval.rs  parser.rs  token.rs  value.rs
src/runner/: cancel.rs  cancel_test.rs  env.rs  env_test.rs  instance.rs  instance_test.rs  report.rs
tests/: basics_test.rs  composite_test.rs  conditions_test.rs  docker_test.rs  expressions_test.rs  hashfiles_test.rs  matrix_test.rs  needs_test.rs  secrets_test.rs  timeout_test.rs  workflow_commands_test.rs
tests/common/: mod.rs
tests/fixtures/: job_manifest.json
