[package]
name = "chimera"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = ">=0.4, <0.4.44", features = ["serde"] }
toml = "0.8"
hostname = "0.4"
dirs = "6"
serde_urlencoded = "0.7.1"
tokio-util = { version = "0.7", features = ["io"] }
serde_repr = "0.1"
flate2 = "1"
tar = "0.4"
serde_yaml = "0.9"
axum = "0.8"
blake3 = "1"
bollard = "0.18"
futures = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
glob = "0.3.3"
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
